좋아요 목록 view 수정

--- a/posts/templates/posts/like_list.html
+++ b/posts/templates/posts/like_list.html
@@ -31,7 +31,24 @@
                 <div class="row">
                     <div class="col-12">
                         {% for like in likes %}
-                            
+                        <div class="ajax-text-and-file">
+                            {% if "video" in post.mediatype %}
+                                <div id="video-{{post.id}}" style="display: block !important;" class="content file">
+                                    <video class="col-12" controls >
+                                        <source src="{{post.mediafile.url}}" alt="video">
+                                    </video>
+                                </div>
+                            {% else %}
+                                <div class="content file">
+                                    <img src ="{{post.mediafile.url}}" alt="">
+                                </div>
+                            {% endif %}
+                        
+                            <div class="content text">
+                                <h3>{{ post.title }}</h3>
+                                <p>{{ post.content }}</p>
+                            </div>
+                        </div>
                         {% endfor %}
                     </div>
                 </div>
