--- a/posts/templates/posts/like_list.html
+++ b/posts/templates/posts/like_list.html
@@ -27,33 +27,47 @@
     <div class="container">
         {% if user.is_authenticated %}
             <div class="col-12 text-center"><h1>좋아요 누른 글 목록</h1></div>
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-12">
+
+            <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-30 {{category_value}} wow fadeInUp" data-wow-delay="100ms" style="display: flex; flex-direction: column-reverse;">
+                <div class="card">
+                    <div class="single-portfolio-content">
                         {% for like in likes %}
-                        <div class="ajax-text-and-file">
-                            {% if "video" in post.mediatype %}
-                                <div id="video-{{post.id}}" style="display: block !important;" class="content file">
+                            {% if "video" in like.post.mediatype %}
+                                <div id="video-{{like.post.id}}" style="display: block !important;">
                                     <video class="col-12" controls >
-                                        <source src="{{post.mediafile.url}}" alt="video">
+                                        <source src="{{like.post.mediafile.url}}" alt="video">
                                     </video>
                                 </div>
+                                <div class="hover-content">
+                                    <a href="#video-{{like.post.id}}" class="video-play-btn">+</a>
+                                </div>  
                             {% else %}
-                                <div class="content file">
-                                    <img src ="{{post.mediafile.url}}" alt="">
+                                <img src ="{{like.post.mediafile.url}}" alt="">
+                                <div class="hover-content">
+                                    <a href="{{like.post.mediafile.url}}" class="portfolio-img">+</a>
                                 </div>
                             {% endif %}
-                        
-                            <div class="content text">
-                                <h3>{{ post.title }}</h3>
-                                <p>{{ post.content }}</p>
-                            </div>
-                        </div>
+                            <p style="padding-top: 20px; word-break: break-all;">{{like.post.title}}</p>
+                            {% if user == like.post.user %}
+                                <span id="count-{{like.post.id}}">좋아요 {{ like.post.like_count }}개</span>
+                            {% endif %}
+                                    </div>    
+                            <a href="{% url 'posts:post_like' like.post.id %}">
+                                {% if user in like.post.like_user_set.all %}
+                                    <a href="#" class="like_toggle" data-post-id={{like.post.id}}>
+                                        <i class="fas fa-heart"></i>
+                                    </a>
+                            {% else %}
+                                <a href="#" class="like_toggle" data-post-id={{like.post.id}}>
+                                    <i class="far fa-heart"></i>
+                                </a>
+                            {% endif %}
+                            </a>
                         {% endfor %}
                     </div>
                 </div>
             </div>
-            
+                
         {% else %}
            <div class="col-12 text-center">
                     <h3 class="wow fadeInUp" data-wow-delay="100ms" contact-title mb-30>로그인 후 이용 가능합니다</h3>
