--- a/dgufest/templates/shared/navbar.html
+++ b/dgufest/templates/shared/navbar.html
@@ -12,7 +12,7 @@
                         <ul class="dropdown">
                             <li><a href="{% url 'users:mypage' %}">- My page</a></li>
                             <li><a href="{% url 'posts:like_list' %}">- 좋아요 누른 글</a></li>
-                            <li><a href="#">- 내가 쓴 글</a></li>
+                            <li><a href="{% url 'posts:postlist' %}">- 내가 쓴 글</a></li>
                         </ul>
                     </li>
                 {% else %}
@@ -37,7 +37,7 @@
                 <ul class="dropdown">
                     <li><a href="{% url 'users:mypage' %}">- My page</a></li>
                     <li><a href="{% url 'posts:like_list' %}">- 좋아요 누른 글</a></li>
-                    <li><a href="#">- 내가 쓴 글</a></li>
+                    <li><a href="{% url 'posts:postlist' %}">- 내가 쓴 글</a></li>
                 </ul>
             </li>
             {% else %}
