--- a/users/templates/users/mypage.html
+++ b/users/templates/users/mypage.html
@@ -30,8 +30,9 @@
                 <div class="col-12 col-lg-6">
                     <h2 class="wow fadeInUp" data-wow-delay="100ms" contact-title mb-30>내 프로필</h2>
                 </div>
-
-                <div class="row">
+                <br><br>
+                
+                <div class="col-12">
                     <div class="col-12 col-md-6 col-lg-3">
                         <!-- Contact Info -->
                             <div class="wow fadeInUp" data-wow-delay="100ms" contact-info mb-30>
@@ -40,6 +41,7 @@
                             </div>
                         <!-- Contact Info -->
                     </div>
+                    <br><br>
 
                     <div class="col-12 col-md-6 col-lg-3">
                         <!-- Contact Info -->
@@ -48,6 +50,7 @@
                                 <a>{{user.email}}</a>
                         </div>
                     </div>
+                    <br><br>
 
                     <div class="col-12 col-md-6 col-lg-3">
                         <!-- Contact Info -->
@@ -56,6 +59,7 @@
                                 <a>{{user.name}}</a>
                         </div>
                     </div>
+                    <br><br>
 
                     <div class="col-12 col-md-6 col-lg-3">
                     <!-- Contact Info -->
@@ -63,6 +67,7 @@
                             <p>학번</p>
                             <a>{{user.student_id}}</a>
                     </div>
+                    <br><br>
                 </div>
         </div>
 
