--- a/dgufest/templates/account/signup.html
+++ b/dgufest/templates/account/signup.html
@@ -36,6 +36,7 @@
             <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
         {% endif %}
         <p style="color: red; font-weight: bolder;">※ 이메일은 학생인증을 위해 학교 웹메일로 작성해주세요. ※</p>
+        <p style="color: black; font-weight: bolder;">회원가입 시 해당 사이트의 서비스 이용약관 및 개인정보처리방침을 확인하였으며, 동의합니다.</p>
             <div id="submit">
                 <button type="submit" id="submit">{% trans "Sign Up" %}</button>
             </div>
