--- a/posts/templates/posts/postlist.html
+++ b/posts/templates/posts/postlist.html
@@ -26,50 +26,50 @@
 <div class="contact-area section-padding-80-50">
     <div class="container">
         {% if user.is_authenticated %}
-            <div class="col-12 text-center"><h1>좋아요 누른 글</h1></div>
+            <div class="col-12 text-center"><h1>내가 쓴 글</h1></div>
             <div class="row alime-portfolio">
-                {% for like in likes %}
+                {% for post in posts %}
                     <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-30 wow fadeInUp" data-wow-delay="100ms" style="display: flex; flex-direction: column-reverse;">
                         <div class="card">
                             <div class="single-portfolio-content">
-                                {% if "video" in like.post.mediatype %}
-                                    <div id="video-{{like.post.id}}" style="display: block !important;">
+                                {% if "video" in post.mediatype %}
+                                    <div id="video-{{post.id}}" style="display: block !important;">
                                         <video class="col-12" controls >
-                                            <source src="{{like.post.mediafile.url}}" alt="video">
+                                            <source src="{{post.mediafile.url}}" alt="video">
                                         </video>
-                                     </div>
+                                    </div>
                                     <div class="hover-content">
-                                        <a href="#video-{{like.post.id}}" class="video-play-btn">+</a>
+                                        <a href="#video-{{post.id}}" class="video-play-btn">+</a>
                                     </div>  
                                 {% else %}
-                                    <img src ="{{like.post.mediafile.url}}" alt="">
+                                    <img src ="{{post.mediafile.url}}" alt="">
                                     <div class="hover-content">
-                                        <a href="{{like.post.mediafile.url}}" class="portfolio-img">+</a>
+                                        <a href="{{post.mediafile.url}}" class="portfolio-img">+</a>
                                     </div>
                                 {% endif %}
-                            
-                                <p style="padding-top: 20px; word-break: break-all;">{{like.post.title}}</p>
 
-                                {% if user == like.post.user %}
-                                    <span id="count-{{like.post.id}}">좋아요 {{ like.post.like_count }}개</span>
+                                <p style="padding-top: 20px; word-break: break-all;">{{ post.title }}</p>
+                                
+                                {% if user == post.user %}
+                                    <span id="count-{{post.id}}">좋아요 {{ post.like_count }}개</span>
                                 {% endif %}
                             </div>
-                                <a href="{% url 'posts:post_like' like.post.id %}">
-                                    {% if user in like.post.like_user_set.all %}
-                                        <a href="#" class="like_toggle" data-post-id={{like.post.id}}>
+                                <a href="{% url 'posts:post_like' post.id %}">
+                                    {% if user in post.like_user_set.all %}
+                                        <a href="#" class="like_toggle" data-post-id={{post.id}}>
                                             <i class="fas fa-heart"></i>
                                         </a>
                                     {% else %}
-                                        <a href="#" class="like_toggle" data-post-id={{like.post.id}}>
+                                        <a href="#" class="like_toggle" data-post-id={{post.id}}>
                                             <i class="far fa-heart"></i>
                                         </a>
                                     {% endif %}
-                                </a>  
+                                </a>
                         </div>
                     </div>
                 {% endfor %}
             </div>
-                
+        
         {% else %}
            <div class="col-12 text-center">
                     <h3 class="wow fadeInUp" data-wow-delay="100ms" contact-title mb-30>로그인 후 이용 가능합니다</h3>
