--- a/dgufest/templates/personal_data.html
+++ b/dgufest/templates/personal_data.html
@@ -1,10 +1,10 @@
-1. 개인정보의 처리 목적 <동국대학교 멋쟁이사자처럼>(‘http://xxx.xxx.xxx’이하 ‘동대멋사’) 은(는) 다음의 목적을 위하여 개인정보를 처리하고 있으며, 다음의 목적 이외의 용도로는 이용하지 않습니다.<br>
+1. 개인정보의 처리 목적 <동국대학교 멋쟁이사자처럼>(‘http://dgufest.com’이하 ‘동대멋사’) 은(는) 다음의 목적을 위하여 개인정보를 처리하고 있으며, 다음의 목적 이외의 용도로는 이용하지 않습니다.<br>
 <br>
 - 고객 가입의사 확인, 고객에 대한 서비스 제공에 따른 본인 식별.인증, 회원자격 유지.관리, 상금 및 상품 지급 등<br>
 <br>
 2. 개인정보의 처리 및 보유 기간<br>
 <br>
-① <동국대학교 멋쟁이사자처럼>(‘http://xxx.xxx.xxx’이하 ‘동대멋사’) 은(는) 정보주체로부터 개인정보를 수집할 때 동의 받은 개인정보 보유․이용기간 또는 법령에 따른 개인정보 보유․이용기간 내에서 개인정보를 처리․보유합니다.<br>
+① <동국대학교 멋쟁이사자처럼>(‘http://dgufest.com’이하 ‘동대멋사’) 은(는) 정보주체로부터 개인정보를 수집할 때 동의 받은 개인정보 보유․이용기간 또는 법령에 따른 개인정보 보유․이용기간 내에서 개인정보를 처리․보유합니다.<br>
 <br>
 ② 구체적인 개인정보 처리 및 보유 기간은 다음과 같습니다.<br>
 <br>
@@ -13,9 +13,9 @@
 <br>
 3. 개인정보의 제3자 제공에 관한 사항<br>
 <br>
-① <동국대학교 멋쟁이사자처럼>('http://xxx.xxx.xxx'이하 '동대멋사')은(는) 정보주체의 동의, 법률의 특별한 규정 등 개인정보 보호법 제17조 및 제18조에 해당하는 경우에만 개인정보를 제3자에게 제공합니다.<br>
+① <동국대학교 멋쟁이사자처럼>('http://dgufest.com'이하 '동대멋사')은(는) 정보주체의 동의, 법률의 특별한 규정 등 개인정보 보호법 제17조 및 제18조에 해당하는 경우에만 개인정보를 제3자에게 제공합니다.<br>
 <br>
-② <동국대학교 멋쟁이사자처럼>('http://xxx.xxx.xxx')은(는) 다음과 같이 개인정보를 제3자에게 제공하고 있습니다.<br>
+② <동국대학교 멋쟁이사자처럼>('http://dgufest.com')은(는) 다음과 같이 개인정보를 제3자에게 제공하고 있습니다.<br>
 <br>
 1. <동국대학교 융합교육원><br>
 개인정보를 제공받는 자 : 동국대학교 융합교육원<br>
@@ -31,7 +31,7 @@
 <br>
 4. 정보주체와 법정대리인의 권리·의무 및 그 행사방법 이용자는 개인정보주체로써 다음과 같은 권리를 행사할 수 있습니다.<br>
 <br>
-① 정보주체는 동국대학교 멋쟁이사자처럼(‘http://xxx.xxx.xxx’이하 ‘동대멋사’) 에 대해 언제든지 다음 각 호의 개인정보 보호 관련 권리를 행사할 수 있습니다.<br>
+① 정보주체는 동국대학교 멋쟁이사자처럼(‘http://dgufest.com’이하 ‘동대멋사’) 에 대해 언제든지 다음 각 호의 개인정보 보호 관련 권리를 행사할 수 있습니다.<br>
 <br>
 1. 개인정보 열람요구<br>
 <br>
@@ -45,7 +45,7 @@
 <br>
 5. 처리하는 개인정보의 항목 작성<br>
 <br>
-① <동국대학교 멋쟁이사자처럼>('http://xxx.xxx.xxx'이하 '동대멋사')은(는) 다음의 개인정보 항목을 처리하고 있습니다.<br>
+① <동국대학교 멋쟁이사자처럼>('http://dgufest.com'이하 '동대멋사')은(는) 다음의 개인정보 항목을 처리하고 있습니다.<br>
 <br>
 1<홈페이지 회원가입 관리, 동국대학교 재학생 식별 및 본인인증><br>
 필수항목 : 이메일, 휴대전화번호, 비밀번호, 로그인ID, 성별, 생년월일, 이름, 학번<br>
@@ -67,14 +67,14 @@
 <br>
 8. 개인정보 보호책임자 작성<br>
 <br>
-① 동국대학교 멋쟁이사자처럼(‘http://xxx.xxx.xxx’이하 ‘동대멋사’) 은(는) 개인정보 처리에 관한 업무를 총괄해서 책임지고, 개인정보 처리와 관련한 정보주체의 불만처리 및 피해구제 등을 위하여 아래와 같이 개인정보 보호책임자를 지정하고 있습니다.<br>
+① 동국대학교 멋쟁이사자처럼(‘http://dgufest.com’이하 ‘동대멋사’) 은(는) 개인정보 처리에 관한 업무를 총괄해서 책임지고, 개인정보 처리와 관련한 정보주체의 불만처리 및 피해구제 등을 위하여 아래와 같이 개인정보 보호책임자를 지정하고 있습니다.<br>
 <br>
 ▶ 개인정보 보호책임자<br>
 성명 : 이주영<br>
 직책 : 동국대학교 멋쟁이사자처럼 8기 대표<br>
 연락처 : 010-7255-3753<br>
 <br>
-② 정보주체께서는 동국대학교 멋쟁이사자처럼(‘http://xxx.xxx.xxx’이하 ‘웹 기반 전자 액자 경진 대회 ) 의 서비스(또는 사업)을 이용하시면서 발생한 모든 개인정보 보호 관련 문의, 불만처리, 피해구제 등에 관한 사항을 개인정보 보호책임자 및 담당부서로 문의하실 수 있습니다. 동국대학교 멋쟁이사자처럼(‘http://xxx.xxx.xxx’이하 ‘동대멋사’) 은(는) 정보주체의 문의에 대해 지체 없이 답변 및 처리해드릴 것입니다.<br>
+② 정보주체께서는 동국대학교 멋쟁이사자처럼(‘http://dgufest.com’이하 ‘웹 기반 전자 액자 경진 대회 ) 의 서비스(또는 사업)을 이용하시면서 발생한 모든 개인정보 보호 관련 문의, 불만처리, 피해구제 등에 관한 사항을 개인정보 보호책임자 및 담당부서로 문의하실 수 있습니다. 동국대학교 멋쟁이사자처럼(‘http://xxx.xxx.xxx’이하 ‘동대멋사’) 은(는) 정보주체의 문의에 대해 지체 없이 답변 및 처리해드릴 것입니다.<br>
 <br>
 9. 개인정보 처리방침 변경<br>
 <br>
