신입생 30명 => 투표 참여자 신입생 30명

--- a/dgufest/templates/about.html
+++ b/dgufest/templates/about.html
@@ -134,7 +134,7 @@
                                 <td>50,000원</td>
                             </tr>
                             <tr>
-                                <th scope="row">신입생 30명</th>
+                                <th scope="row">투표 참여자 신입생 30명</th>
                                 <td>스타벅스 1만원권</td>
                             </tr>
                         </table>
