gallery-breadcrumb 링크 연결

--- a/posts/templates/posts/gallery.html
+++ b/posts/templates/posts/gallery.html
@@ -12,7 +12,7 @@
                     <h2 class="page-title">Gallery</h2>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
-                            <li class="breadcrumb-item"><a href="#"><i class="icon_house_alt"></i> Home</a></li>
+                            <li class="breadcrumb-item"><a href="{% url 'index' %}"><i class="icon_house_alt"></i> Home</a></li>
                             <li class="breadcrumb-item active" aria-current="page">Gallery</li>
                         </ol>
                     </nav>
