--- a/posts/templates/posts/gallery.html
+++ b/posts/templates/posts/gallery.html
@@ -38,15 +38,17 @@
                         <button class="btn" data-filter=".performance">공연</button>
                         <button class="btn" data-filter=".etc">기타</button>
                     </div>
-                    <select id="sort-select" onchange="location = this.value;">
-                        {% if "/?sort=random" in request.get_full_path %}
-                            <option class="sort-new" value="?new" >최신순</option>
-                            <option class="sort-random" value="?sort=random" selected>랜덤순</option>
-                        {% else %}
-                            <option class="sort-new" value="?new" selected>최신순</option>
-                            <option class="sort-random" value="?sort=random" >랜덤순</option>
-                        {% endif %}
-                    </select>
+                    <div class="col-12 text-left wow fadeInUp" data-wow-delay="800ms">
+                        <select id="sort-select" class="btn alime-btn btn-2 mt-15" onchange="location = this.value;">
+                            {% if "/?sort=random" in request.get_full_path %}
+                                <option class="sort-new" value="?new" >최신순</option>
+                                <option class="sort-random" value="?sort=random" selected>랜덤순</option>
+                            {% else %}
+                                <option class="sort-new" value="?new" selected>최신순</option>
+                                <option class="sort-random" value="?sort=random" >랜덤순</option>
+                            {% endif %}
+                        </select>
+                    </div>
                     <div class="col-12 text-left wow fadeInUp" data-wow-delay="800ms">
                         <a href="{% url 'posts:new' %}" class="btn alime-btn btn-2 mt-15">Upload</a>
                     </div>
