--- a/dgufest/templates/base.html
+++ b/dgufest/templates/base.html
@@ -13,7 +13,7 @@
     <title>동국대 전자 액자 경진 대회</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="{% static 'img/core-img/favicon.png' %}">
+    <link rel="icon" href="{% static 'img/core-img/festival.png' %}">
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
