--- a/dgufest/templates/popup.html
+++ b/dgufest/templates/popup.html
@@ -1,4 +1,5 @@
 {% load static %}
+<link rel="icon" href="{% static 'img/core-img/festival.png' %}">
 <script language="javascript">
     function setCookie( name, value, expiredays ) {
         var todayDate = new Date();
