--- a/dgufest/templates/about.html
+++ b/dgufest/templates/about.html
@@ -134,7 +134,7 @@
                                 <td>50,000원</td>
                             </tr>
                             <tr>
-                                <th scope="row">신입생 30명</th>
+                                <th scope="row">투표 참여자 신입생 30명</th>
                                 <td>스타벅스 1만원권</td>
                             </tr>
                         </table>
@@ -174,7 +174,7 @@
                 <!-- Support Member Area -->
                 <div class="col-md-6 col-xl-12">
                     <div class="team-content-area text-center mb-30 wow fadeInUp" data-wow-delay="100ms">
-                        <h5>동국대학교 융합교육원 | 동국대학교 제50대 총학생회 하이라이트</h5>
+                        <h5>동국대학교 융합교육원 | 동국대학교 제52대 총학생회 하이라이트</h5>
                         <span>지원 | 상금 및 상품 지원</span>
                     </div>
                 </div>
