--- a/dgufest/templates/about.html
+++ b/dgufest/templates/about.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="col-12 col-lg-6">
                     <div class="about-video-area mb-80 wow fadeInUp" data-wow-delay="100ms">
-                        <img src="{%static 'img/about-img/aboutimg2.jpg' %}" alt="임시이미지">
+                        <img src="{%static 'img/about-img/aboutimg2.jpg' %}">
                     </div>
                 </div>
             </div>
@@ -72,17 +72,17 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="why-choose-us-content text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
                         <div class="chosse-us-icon">
-                            <i class="fa fa-film" aria-hidden="true"></i>
+                            <i class="far fa-calendar-alt" aria-hidden="true"></i>
                         </div>
                         <h4>일정 안내</h4>
                         <table class="type04">
                             <tr>
-                                <th scope="row">투표 기간</th>
-                                <td>11월 1일<br>자정까지</td>
+                                <th scope="row"><p>투표 기간</p></th>
+                                <td><p>11월 1일 자정까지</p></td>
                             </tr>
                             <tr>
-                                <th scope="row">수상작 발표</th>
-                                <td>11월 2일 (예정)</td>
+                                <th scope="row"><p>수상작 발표</p></th>
+                                <td><p>11월 2일 (예정)</p></td>
                             </tr>
                         </table>
                     </div>
@@ -92,7 +92,7 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="why-choose-us-content text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
                         <div class="chosse-us-icon">
-                            <i class="fa fa-pencil" aria-hidden="true"></i>
+                            <i class="fab fa-gratipay" aria-hidden="true"></i>
                         </div>
                         <h4>투표 안내</h4>
                         <p>
@@ -113,29 +113,29 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="why-choose-us-content text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
                         <div class="chosse-us-icon">
-                            <i class="fa fa-camera" aria-hidden="true"></i>
+                            <i class="fa fa-gift" aria-hidden="true"></i>
                         </div>
                         <h4>상품 안내</h4>
                         <table class="type04">
                             <tr>
-                                <th scope="row">대상 1명</th>
-                                <td>300,000원</td>
+                                <th scope="row"><p>대상 1명</p></th>
+                                <td><p>300,000원</p></td>
                             </tr>
                             <tr>
-                                <th scope="row">최우수상 1명</th>
-                                <td>200,000원</td>
+                                <th scope="row"><p>최우수상 1명</p></th>
+                                <td><p>200,000원</p></td>
                             </tr>
                             <tr>
-                                <th scope="row">우수상 1명</th>
-                                <td>100,000원</td>
+                                <th scope="row"><p>우수상 1명</p></th>
+                                <td><p>100,000원</p></td>
                             </tr>
                             <tr>
-                                <th scope="row">장려상 8명 (부문별 2명)</th>
-                                <td>50,000원</td>
+                                <th scope="row"><p>장려상 8명<br>(부문별 2명)</p></th>
+                                <td><p>&nbsp&nbsp50,000원</p></td>
                             </tr>
                             <tr>
-                                <th scope="row">투표 참여자 신입생 30명</th>
-                                <td>스타벅스 1만원권</td>
+                                <th scope="row"><p>투표 참여자<br>신입생 30명</p></th>
+                                <td><p>스타벅스 1만원권</p></td>
                             </tr>
                         </table>
                     </div>
