가운데정렬

--- a/dgufest/templates/base.html
+++ b/dgufest/templates/base.html
@@ -53,7 +53,8 @@
 
 </head>
 
-<body oncontextmenu='return false'>
+<body>
+<!-- <body oncontextmenu='return false'> -->
     <!-- Preloader -->
     <div id="preloader">
         <div class="loader"></div>
