--- a/dgufest/static/css/style.css
+++ b/dgufest/static/css/style.css
@@ -447,7 +447,7 @@ input:required {
   font-weight: 500;
   display: inline-block;
   padding: 0 30px;
-  text-align: center;
+  text-align-last: center;
   text-transform: capitalize;
   background-color: transparent;
   color: #ffffff;
@@ -457,14 +457,13 @@ input:required {
   -o-transition-duration: 500ms;
   transition-duration: 500ms; }
   .alime-btn.btn-2 {
-    color: #252525; }
+    color: #252525;}
   .alime-btn:focus, .alime-btn:hover {
     font-weight: 500;
     -webkit-box-shadow: 0 2px 40px 8px rgba(15, 15, 15, 0.15);
     box-shadow: 0 2px 40px 8px rgba(15, 15, 15, 0.15);
     background-color: #fc6060;
     color: #ffffff; }
-
 
 .badges-btn {
   background-color: #ebebeb;
