우클릭 다시 설정

--- a/dgufest/templates/base.html
+++ b/dgufest/templates/base.html
@@ -53,8 +53,7 @@
 
 </head>
 
-<body>
-<!-- <body oncontextmenu='return false'> -->
+<body oncontextmenu='return false'>
     <!-- Preloader -->
     <div id="preloader">
         <div class="loader"></div>
