--- a/dgufest/templates/account/signup.html
+++ b/dgufest/templates/account/signup.html
@@ -1,4 +1,5 @@
 {% extends "account/base.html" %}
+{% load static %}
 
 {% load i18n %}
 
@@ -29,21 +30,24 @@
     <p>{% blocktrans %}이미 계정이 있으신가요? 바로
     <a href="{{ login_url }}" style="color:#fc6060; font-weight: bolder;">로그인</a>하세요.{% endblocktrans %}</p>
 
-    <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+    <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}" onsubmit="verifyEmail()">
         {% csrf_token %}
         {{ form.as_p }}
         {% if redirect_field_value %}
             <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
         {% endif %}
         <p style="color: red; font-weight: bolder;">※ 이메일은 학생인증을 위해 학교 웹메일로 작성해주세요. ※</p>
-            <div id="submit">
-                <button type="submit" id="submit">{% trans "Sign Up" %}</button>
-            </div>
+        <div id="submit">
+            <button type="submit" id="submit">{% trans "Sign Up" %}</button>
+        </div>
     </form>
     <p style="padding-top: 30px; color: #fc6060">{% blocktrans %}↓회원가입에 문제가 있으시면 저희에게 연락주세요.↓{% endblocktrans %}</p>
     <a href="https://pf.kakao.com/_jxbIxfd">
-        <i class="fas fa-comment">  카카오톡 채널 <동국대-멋쟁이 사자처럼></i>
+        <i class="fas fa-comment">  카카오톡 채널 <멋쟁이사자처럼 at 동국대학교></i>
+    </a>
 </div>
+
+<script src="{% static 'js/email-verification.js' %}"></script>
 
 {% endblock %}
 
