--- a/dgufest/templates/account/password_reset.html
+++ b/dgufest/templates/account/password_reset.html
@@ -34,8 +34,8 @@
     <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
         {% csrf_token %}
         {{ form.as_p }}
-        <div id="submit">
-            <button type="submit" id="submit">{% trans 'Reset My Password' %}</button>
+        <div class="col-12" data-wow-delay="800ms">
+            <button type="submit" class="btn alime-btn btn-2 mt-15">{% trans 'Reset My Password' %}</button>
         </div>
     </form>
 
