--- a/dgufest/templates/account/password_reset_from_key.html
+++ b/dgufest/templates/account/password_reset_from_key.html
@@ -31,8 +31,8 @@
             <form method="POST" action="{{ action_url }}">
                 {% csrf_token %}
                 {{ form.as_p }}
-                <div id="submit">
-                    <button type="submit" id="submit">{% trans 'change password' %}</button>
+                <div class="col-12" data-wow-delay="800ms">
+                    <button type="submit" class="btn alime-btn btn-2 mt-15">{% trans 'change password' %}</button>
                 </div>
             </form>
         {% else %}
