--- a/dgufest/templates/account/password_reset_from_key_done.html
+++ b/dgufest/templates/account/password_reset_from_key_done.html
@@ -24,8 +24,8 @@
 </section>
 <div id="allauth">
     <p>{% trans 'Your password is now changed.' %}</p>
-    <div id="submit">
-        <button type="submit" id="submit"><a href="{% url 'account_login' %}">로그인으로 돌아가기</button>
+    <div class="col-12" data-wow-delay="800ms">
+        <button type="submit" class="btn alime-btn btn-2 mt-15"><a href="{% url 'account_login' %}">로그인으로 돌아가기</button></button>
     </div>
 </div>
 {% endblock %}
