--- a/users/templates/users/mypage.html
+++ b/users/templates/users/mypage.html
@@ -28,10 +28,12 @@
         <div class="row">
             {% if user.is_authenticated %}
                 <div class="col-12 col-lg-6">
-                    <h2 class="wow fadeInUp" data-wow-delay="100ms" contact-title mb-30>내 프로필</h2>
+                    <h2 class="wow fadeInUp" data-wow-delay="100ms" contact-title mb-30 style="margin-left:200px">내 프로필</h2>
+                    <a href="{% url 'users:password_change' %}" class="btn alime-btn btn-2 mt-15" style="margin-left:190px">비밀번호 변경</a>
                 </div>
+                <br><br><br><br>
 
-                <div class="row">
+                <div style="margin-left:100px">
                     <div class="col-12 col-md-6 col-lg-3">
                         <!-- Contact Info -->
                             <div class="wow fadeInUp" data-wow-delay="100ms" contact-info mb-30>
@@ -40,6 +42,7 @@
                             </div>
                         <!-- Contact Info -->
                     </div>
+                    <br><br>
 
                     <div class="col-12 col-md-6 col-lg-3">
                         <!-- Contact Info -->
@@ -48,17 +51,26 @@
                                 <a>{{user.email}}</a>
                         </div>
                     </div>
-                </div>
-                
+                    <br><br>
 
-                <!-- Contact Info -->
-                
-                <!-- Contact Info -->
-                <div class="col-12 col-md-6 col-lg-3">
-                    <div class="col-12 text-right wow fadeInUp" data-wow-delay="800ms">
-                        <a href="{% url 'users:password_change' %}" class="btn alime-btn btn-2 mt-15">비밀번호 변경</a>
+                    <div class="col-12 col-md-6 col-lg-3">
+                        <!-- Contact Info -->
+                        <div class="wow fadeInUp" data-wow-delay="100ms" contact-info mb-30>
+                                <p>Name</p>
+                                <a>{{user.name}}</a>
+                        </div>
                     </div>
+                    <br><br>
+
+                        <div class="col-12 col-md-6 col-lg-3">
+                        <!-- Contact Info -->
+                        <div class="wow fadeInUp" data-wow-delay="100ms" contact-info mb-30>
+                                <p>student_id</p>
+                                <a>{{user.student_id}}</a>
+                        </div>
+                        <br><br>
                 </div>
+        </div>
 
             {% else %}
                 <div class="col-12 col-lg-6">
