--- a/users/templates/users/mypage.html
+++ b/users/templates/users/mypage.html
@@ -34,7 +34,7 @@
                 <br><br><br><br>
 
                 <div style="margin-left:100px">
-                    <div class="col-12 col-md-6 col-lg-3">
+                    <div class="col-12">
                         <!-- Contact Info -->
                             <div class="wow fadeInUp" data-wow-delay="100ms" contact-info mb-30>
                                 <p style="font-weight:bolder">아이디</p>
@@ -53,7 +53,7 @@
                     </div>
                     <br><br>
 
-                    <div class="col-12 col-md-6 col-lg-3">
+                    <div class="col-12">
                         <!-- Contact Info -->
                         <div class="wow fadeInUp" data-wow-delay="100ms" contact-info mb-30>
                                 <p style="font-weight:bolder">이름</p>
@@ -62,7 +62,7 @@
                     </div>
                     <br><br>
 
-                        <div class="col-12 col-md-6 col-lg-3">
+                        <div class="col-12">
                         <!-- Contact Info -->
                         <div class="wow fadeInUp" data-wow-delay="100ms" contact-info mb-30>
                                 <p style="font-weight:bolder">학번</p>
