mypage(like_list/postlist/mypage/password_change) breadcrumb 링크 연결

--- a/users/templates/users/password_change.html
+++ b/users/templates/users/password_change.html
@@ -11,7 +11,7 @@
                     <h2 class="page-title">My page</h2>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
-                            <li class="breadcrumb-item"><a href="#"><i class="icon_house_alt"></i> Home</a></li>
+                            <li class="breadcrumb-item"><a href="{% url 'index' %}"><i class="icon_house_alt"></i> Home</a></li>
                             <li class="breadcrumb-item active" aria-current="page">My page</li>
                         </ol>
                     </nav>
@@ -68,6 +68,7 @@
                 
         </div>
     </div>
+    
 </div>
 <!-- password change Area End -->
 
