--- a/posts/templates/posts/postlist.html
+++ b/posts/templates/posts/postlist.html
@@ -26,7 +26,7 @@
 <div class="contact-area section-padding-80-50">
     <div class="container">
         {% if user.is_authenticated %}
-            <div class="col-12 text-center mb-5"><h1>내가 쓴 글</h1></div>
+            <div class="col-12 text-center mb-5"><h1 style="font-family:'yg-jalnan';">내가 쓴 글</h1></div>
             <div class="row alime-portfolio">
                 {% for post in posts %}
                     <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-30 wow fadeInUp" data-wow-delay="100ms" style="display: flex; flex-direction: column-reverse;">
