like_list에 하트 아이콘 색 갤러리팀이랑 통일

--- a/posts/templates/posts/like_list.html
+++ b/posts/templates/posts/like_list.html
@@ -56,11 +56,11 @@
                             </div>
                                 <a href="{% url 'posts:post_like' like.post.id %}">
                                     {% if user in like.post.like_user_set.all %}
-                                        <a href="#" class="like_toggle" data-post-id={{like.post.id}}>
+                                        <a href="#" class="like_toggle" data-post-id={{like.post.id}}  style="color:#fd5f60;">
                                             <i class="fas fa-heart"></i>
                                         </a>
                                     {% else %}
-                                        <a href="#" class="like_toggle" data-post-id={{like.post.id}}>
+                                        <a href="#" class="like_toggle" data-post-id={{like.post.id}}  style="color:#fd5f60;">
                                             <i class="far fa-heart"></i>
                                         </a>
                                     {% endif %}
