likelist, postlist 넓게 보이게끔 수정

--- a/posts/templates/posts/like_list.html
+++ b/posts/templates/posts/like_list.html
@@ -23,66 +23,69 @@
 <!-- Breadcrumb Area End -->
 
 <!--contentarea start-->
-<div class="contact-area section-padding-80-50">
-    <div class="container">
-        {% if user.is_authenticated %}
-            <div class="col-12 text-center mb-5"><h1 style="font-family:'yg-jalnan';">좋아요 누른 글</h1></div>
-            <div class="row alime-portfolio">
-                {% for like in likes %}
-                    <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-30 wow fadeInUp" data-wow-delay="100ms" style="display: flex; flex-direction: column-reverse;">
-                        <div class="card">
-                            <div class="single-portfolio-content">
-                                {% if "video" in like.post.mediatype %}
-                                    <div id="video-{{like.post.id}}" style="display: block !important;">
-                                        <video class="col-12" controls >
-                                            <source src="{{like.post.mediafile.url}}" alt="video">
-                                        </video>
-                                     </div>
-                                    <div class="hover-content">
-                                        <a href="#video-{{like.post.id}}" class="video-play-btn">+</a>
-                                    </div>  
-                                {% else %}
-                                    <img src ="{{like.post.mediafile.url}}" alt="">
-                                    <div class="hover-content">
-                                        <a href="{{like.post.mediafile.url}}" class="portfolio-img">+</a>
+<div class="alime-portfolio-area section-padding-80 clearfix">
+    <div class="container-fluid">
+        <div class="contact-area section-padding-50-50">
+            <div class="container">
+                {% if user.is_authenticated %}
+                    <div class="col-12 text-center mb-5"><h1 style="font-family:'yg-jalnan';">좋아요 누른 글</h1></div>
+                    <div class="row alime-portfolio">
+                        {% for like in likes %}
+                            <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-30 wow fadeInUp" data-wow-delay="100ms" style="display: flex; flex-direction: column-reverse;">
+                                <div class="card">
+                                    <div class="single-portfolio-content">
+                                        {% if "video" in like.post.mediatype %}
+                                            <div id="video-{{like.post.id}}" style="display: block !important;">
+                                                <video class="col-12" controls >
+                                                    <source src="{{like.post.mediafile.url}}" alt="video">
+                                                </video>
+                                                </div>
+                                            <div class="hover-content">
+                                                <a href="#video-{{like.post.id}}" class="video-play-btn">+</a>
+                                            </div>  
+                                        {% else %}
+                                            <img src ="{{like.post.mediafile.url}}" alt="">
+                                            <div class="hover-content">
+                                                <a href="{{like.post.mediafile.url}}" class="portfolio-img">+</a>
+                                            </div>
+                                        {% endif %}
+                                    
+                                        <p style="padding-top: 20px; word-break: break-all;">{{like.post.title}}</p>
+
+                                        {% if user == like.post.user %}
+                                            <span id="count-{{like.post.id}}">좋아요 {{ like.post.like_count }}개</span>
+                                        {% endif %}
                                     </div>
-                                {% endif %}
-                            
-                                <p style="padding-top: 20px; word-break: break-all;">{{like.post.title}}</p>
-
-                                {% if user == like.post.user %}
-                                    <span id="count-{{like.post.id}}">좋아요 {{ like.post.like_count }}개</span>
-                                {% endif %}
+                                        <a href="{% url 'posts:post_like' like.post.id %}">
+                                            {% if user in like.post.like_user_set.all %}
+                                                <a href="#" class="like_toggle" data-post-id={{like.post.id}}  style="color:#fd5f60;">
+                                                    <i class="fas fa-heart"></i>
+                                                </a>
+                                            {% else %}
+                                                <a href="#" class="like_toggle" data-post-id={{like.post.id}}  style="color:#fd5f60;">
+                                                    <i class="far fa-heart"></i>
+                                                </a>
+                                            {% endif %}
+                                        </a>  
+                                </div>
                             </div>
-                                <a href="{% url 'posts:post_like' like.post.id %}">
-                                    {% if user in like.post.like_user_set.all %}
-                                        <a href="#" class="like_toggle" data-post-id={{like.post.id}}  style="color:#fd5f60;">
-                                            <i class="fas fa-heart"></i>
-                                        </a>
-                                    {% else %}
-                                        <a href="#" class="like_toggle" data-post-id={{like.post.id}}  style="color:#fd5f60;">
-                                            <i class="far fa-heart"></i>
-                                        </a>
-                                    {% endif %}
-                                </a>  
+                        {% endfor %}
+                    </div>
+                        
+                {% else %}
+                    <div class="col-12 text-center">
+                            <h3 class="wow fadeInUp" data-wow-delay="100ms" contact-title mb-30>로그인 후 이용 가능합니다</h3>
                         </div>
-                    </div>
-                {% endfor %}
-            </div>
-                
-        {% else %}
-           <div class="col-12 text-center">
-                    <h3 class="wow fadeInUp" data-wow-delay="100ms" contact-title mb-30>로그인 후 이용 가능합니다</h3>
-                </div>
 
-                <div class="col-12 text-center">
-                    <div class="col-12 wow fadeInUp" data-wow-delay="800ms">
-                        <a href="{% url 'account_login' %}" class="btn alime-btn btn-2 mt-15">로그인</a>
-                    </div>
-                </div>
-        {% endif %}
+                        <div class="col-12 text-center">
+                            <div class="col-12 wow fadeInUp" data-wow-delay="800ms">
+                                <a href="{% url 'account_login' %}" class="btn alime-btn btn-2 mt-15">로그인</a>
+                            </div>
+                        </div>
+                {% endif %}
+            </div>
+        </div>
     </div>
 </div>
-
 {% endblock %}
 <!--content area end-->
