--- a/users/templates/users/mypage.html
+++ b/users/templates/users/mypage.html
@@ -47,8 +47,8 @@
                     <div class="col-12">
                         <!-- Contact Info -->
                         <div class="wow fadeInUp" data-wow-delay="100ms" contact-info mb-30>
-                                <p style="font-weight:bolder">이메일</p>
-                                <a>{{user.email}}</a>
+                                <p style="font-weight:bolder">핸드폰 번호</p>
+                                <a>{{user.profile.phone_number}}</a>
                         </div>
                     </div>
                     <br><br>
