--- a/posts/templates/posts/new.html
+++ b/posts/templates/posts/new.html
@@ -45,8 +45,10 @@
                                 <textarea class="form-control mb-30" name="content" placeholder="내용 입력" style="color:black;"></textarea>
                             </div>
                             <div class="col-12">
-                                <label for="input-mediafile" class="btn btn-outline" style="border: 1px solid #80808042;">파일 선택</label>
-                                <input type="file" id="input-mediafile" style="display: none;" name="mediafile" onchange="limitSize(this)" accept="image/*, video/*" required>
+                                <label for="uploadFile" class="upload-file" >
+                                    <div class="btn btn-outline">파일 선택<input type="file" id="input-mediafile"  name="mediafile" onchange="limitSize(this)" accept="image/*, video/*" required></div>
+                                    <p></p><!-- 업로드파일명 -->
+                                </label>
                             </div>
                             <div class="col-12">
                                 <button type="submit" class="btn alime-btn btn-2 mt-15">Upload</button>
