--- a/posts/templates/posts/update.html
+++ b/posts/templates/posts/update.html
@@ -64,11 +64,12 @@
                         <div class="col-12">
                             <textarea class="form-control mb-30" name="content" placeholder="내용 입력">{{ post.content }}</textarea>
                         </div>
-                        <div class="col-12">  
-                            <input type="file" name="mediafile" onchange="limitSize(this)" accept="post.mediafile" >
+                        <div class="col-12">
+                            <label for="uploadFile" class="upload-file" >
+                                <div class="btn btn-outline">파일 선택<input type="file" name="mediafile" onchange="limitSize(this)" accept="post.mediafile"></div>
+                                <p>{{post.mediafile}}</p><!-- 업로드파일명 -->
+                            </label>
                         </div>
-                
-
                         <div class="col-12">
                             <button type="submit" class="btn alime-btn btn-2 mt-15">Upload</button>
                         </div>
