postlist, likelist users앱에이동

--- a/dgufest/templates/shared/navbar.html
+++ b/dgufest/templates/shared/navbar.html
@@ -11,8 +11,8 @@
                     <li><a href="{% url 'users:mypage' %}">- My page</a>
                         <ul class="dropdown">
                             <li><a href="{% url 'users:mypage' %}">- My page</a></li>
-                            <li><a href="{% url 'posts:like_list' %}">- 좋아요 누른 글</a></li>
-                            <li><a href="{% url 'posts:postlist' %}">- 내가 쓴 글</a></li>
+                            <li><a href="{% url 'users:like_list' %}">- 좋아요 누른 글</a></li>
+                            <li><a href="{% url 'users:postlist' %}">- 내가 쓴 글</a></li>
                         </ul>
                     </li>
                 {% else %}
@@ -36,8 +36,8 @@
             <li><a href="{% url 'users:mypage' %}">My page</a>
                 <ul class="dropdown">
                     <li><a href="{% url 'users:mypage' %}">- My page</a></li>
-                    <li><a href="{% url 'posts:like_list' %}">- 좋아요 누른 글</a></li>
-                    <li><a href="{% url 'posts:postlist'%}">- 내가 쓴 글</a></li>
+                    <li><a href="{% url 'users:like_list' %}">- 좋아요 누른 글</a></li>
+                    <li><a href="{% url 'users:postlist'%}">- 내가 쓴 글</a></li>
                 </ul>
             </li>
         {% else %}
