--- a/dgufest/static/css/style.css
+++ b/dgufest/static/css/style.css
@@ -466,7 +466,7 @@ input:required {
     color: #ffffff; }
 
 /* select box */
-select {
+#sort-select {
   width: 200px;
   padding: .8em .5em;
   font-family: inherit;
@@ -489,6 +489,14 @@ select {
 
 #select_box {
   padding-left:15px;
+}
+
+#category{
+  background: url(https://farm1.staticflickr.com/379/19928272501_4ef877c265_t.jpg) no-repeat 95% 50%;  
+  -webkit-appearance: none;
+      -moz-appearance: none;
+          appearance: none;
+
 }
   
 
