postlist, likelist 좋아요 눌리도록 수정

--- a/users/templates/users/like_list.html
+++ b/users/templates/users/like_list.html
@@ -87,5 +87,33 @@
         </div>
     </div>
 </div>
+
+<script
+    src="https://code.jquery.com/jquery-3.4.1.js"
+    integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+    crossorigin="anonymous"></script>
+<script>
+    $(function() {
+        $('.like_toggle').click(function(e){
+            e.preventDefault();
+            const likeButton = $(this);
+            const postId = likeButton.data('post-id');
+            const heartIcon = likeButton.find('i')
+            $.ajax({
+                url: `/posts/${postId}/post_like/`,
+                data: {'csrfmiddlewaretoken': '{{ csrf_token }}'},
+                type: "POST",
+                success: function(response) {
+                    likeButton.html(response.heart_icon);
+                    $(`#count-${postId}`).html('좋아요 '+response.like_count+'개');
+                },
+
+                error: function(response) {
+                    alert('오류가 발생했습니다.');
+                }
+            });
+        });
+    });
+</script>
 {% endblock %}
 <!--content area end-->
