--- a/posts/templates/posts/new.html
+++ b/posts/templates/posts/new.html
@@ -41,9 +41,11 @@
                     
                         </div>
                             <div class="col-12">
+                                <label>제목</label>
                                 <input type="text" class="form-control mb-30" name="title" placeholder="제목 입력" required style="color:black;">
                             </div>
                             <div class="col-12">
+                                <label>내용</label>
                                 <textarea class="form-control mb-30" name="content" placeholder="내용 입력" style="color:black;"></textarea>
                             </div>
                             <div class="col-12">
