정렬 드랍다운 디자인 수정(검정색 제거)

--- a/posts/templates/posts/update.html
+++ b/posts/templates/posts/update.html
@@ -63,9 +63,11 @@
                         </div>
 
                         <div class="col-12">
+                            <label>제목</label>
                             <input type="text" class="form-control mb-30" name="title" value = "{{ post.title }}", placeholder="제목 입력" required style="color:black;">
                         </div>
                         <div class="col-12">
+                            <label>내용</label>
                             <textarea class="form-control mb-30" name="content" placeholder="내용 입력" style="color:black;">{{ post.content }} </textarea>
                         </div>
                         <div class="col-12">  
