--- a/posts/templates/posts/gallery.html
+++ b/posts/templates/posts/gallery.html
@@ -37,8 +37,8 @@
                         <button class="btn" data-filter=".performance">공연</button>
                         <button class="btn" data-filter=".etc">기타</button>
                     </div>
-                    <div id="select_box" class="col-12 text-left wow fadeInUp" data-wow-delay="800ms">
-                        <select id="sort-select" onchange="location = this.value;">
+                    <div id="select_box" class="col-12 text-left wow fadeInUp form-group" data-wow-delay="800ms">
+                        <select id="sort-select" onchange="location = this.value;" class="form-control col-md-2 mb-2">
                             {% if "/?sort=random" in request.get_full_path %}
                                 <option class="sort-new" value="?new" >최신순</option>
                                 <option class="sort-random" value="?sort=random" selected>랜덤순</option>
