에러메시지 색상변경

--- a/dgufest/templates/account/login.html
+++ b/dgufest/templates/account/login.html
@@ -41,4 +41,11 @@
             </div>
     </form>
 </div>
+
+<style>
+    #allauth ul.errorlist li {
+      color: #ff0e0e;
+      font-weight: bold;
+    }
+  </style>
 {% endblock %}
