--- a/users/templates/users/postlist.html
+++ b/users/templates/users/postlist.html
@@ -41,12 +41,12 @@
                                                 </video>
                                             </div>
                                             <div class="hover-content">
-                                                <a href="#video-{{post.id}}" class="video-play-btn">+</a>
+                                                <a href="{% url 'posts:show' post.id %}" class="whyrano-video">+</a>
                                             </div>  
                                         {% else %}
                                             <img src ="{{post.mediafile.url}}" alt="">
                                             <div class="hover-content">
-                                                <a href="{{post.mediafile.url}}" class="portfolio-img">+</a>
+                                                <a href="{% url 'posts:show' post.id %}" class="whyrano-img">+</a>
                                             </div>
                                         {% endif %}
 
