업로드,수정 시 사진 미리보기

--- a/posts/templates/posts/new.html
+++ b/posts/templates/posts/new.html
@@ -48,6 +48,7 @@
                                 <label for="uploadFile" class="upload-file" >
                                     <div class="btn btn-outline">파일 선택<input type="file" id="input-mediafile"  name="mediafile" onchange="limitSize(this)" accept="image/*, video/*" required></div>
                                     <p></p><!-- 업로드파일명 -->
+                                    <div id="content"></div>
                                 </label>
                             </div>
                             <div class="col-12">
